Added node display in editNodeAnimator

--- a/.gitignore
+++ b/.gitignore
@@ -6498,3 +6498,58 @@ SSWE/Worlds/Old/shaders save.world
 SSWE/Worlds/Old/silent.world
 SSWE/Worlds/silent.world
 SSWE/Worlds/zombie.world
+SSWE/L.world
+SSWE/wall for volume light testing/alabaster-jar1.jpg
+SSWE/wall for volume light testing/alabaster-jar1.zip
+SSWE/wall for volume light testing/alabaster-jars2and3.jpg
+SSWE/wall for volume light testing/alabaster-jars2and3.zip
+SSWE/wall for volume light testing/arch-and-wall.jpg
+SSWE/wall for volume light testing/arch-and-wall.zip
+SSWE/wall for volume light testing/arches-wide.jpg
+SSWE/wall for volume light testing/arches-wide.zip
+SSWE/wall for volume light testing/biblical-houses-add-on.jpg
+SSWE/wall for volume light testing/Biblical houses - add-on.zip
+SSWE/wall for volume light testing/house-with-interior.jpg
+SSWE/wall for volume light testing/house-with-interior.zip
+SSWE/wall for volume light testing/jugs.jpg
+SSWE/wall for volume light testing/jugs.zip
+SSWE/wall for volume light testing/lamp-and-cooking.jpg
+SSWE/wall for volume light testing/lamp-and-cooking.zip
+SSWE/wall for volume light testing/lightFalloff.png
+SSWE/wall for volume light testing/MIDDLE-EASTERN-HOUSE-1.jpg
+SSWE/wall for volume light testing/MIDDLE-EASTERN-HOUSE-1.zip
+SSWE/wall for volume light testing/MIDDLE-EASTERN-HOUSE-2.jpg
+SSWE/wall for volume light testing/MIDDLE-EASTERN-HOUSE-2.zip
+SSWE/wall for volume light testing/Middle-Eastern-House-2story-v1.jpg
+SSWE/wall for volume light testing/Middle-Eastern-House-2story-v1.zip
+SSWE/wall for volume light testing/Middle-Eastern-House-2story-v2.jpg
+SSWE/wall for volume light testing/Middle-Eastern-House-2story-v2.zip
+SSWE/wall for volume light testing/Middle-Eastern-House-2story-v3.zip
+SSWE/wall for volume light testing/Middle-Eastern-House-v3.jpg
+SSWE/wall for volume light testing/Middle-Eastern-House-v3.zip
+SSWE/wall for volume light testing/middle-eastern-house 2story v3.jpg
+SSWE/wall for volume light testing/Middle-Eastern-House.mtl
+SSWE/wall for volume light testing/middle-eastern-houses-rightsided-door.jpg
+SSWE/wall for volume light testing/middle-eastern-houses-rightsided-door.zip
+SSWE/wall for volume light testing/nativity-stable-enclosed.gif
+SSWE/wall for volume light testing/nativity-stable-enclosed.zip
+SSWE/wall for volume light testing/nativity-stable.gif
+SSWE/wall for volume light testing/nativity-stable.zip
+SSWE/wall for volume light testing/portal7.bmp
+SSWE/wall for volume light testing/scroll-closed.jpg
+SSWE/wall for volume light testing/scroll-closed.zip
+SSWE/wall for volume light testing/scroll.jpg
+SSWE/wall for volume light testing/scroll.zip
+SSWE/wall for volume light testing/shofar1.jpg
+SSWE/wall for volume light testing/shofar1.zip
+SSWE/wall for volume light testing/shofar2.jpg
+SSWE/wall for volume light testing/shofar2.zip
+SSWE/wall for volume light testing/shofar3.jpg
+SSWE/wall for volume light testing/shofar3.zip
+SSWE/wall for volume light testing/starfield-1680x1050.gif
+SSWE/wall for volume light testing/starfield-1680x1050.zip
+SSWE/wall for volume light testing/wall.bmp
+SSWE/wall for volume light testing/water-jugs.jpg
+SSWE/wall for volume light testing/water-jugs.zip
+SSWE/wall for volume light testing/yad.jpg
+SSWE/wall for volume light testing/YAD.zip
