Worked on a stable version
Made:
	- Resolved a lot of bugs
	- Worked on light shafts addition
	- Worked on threads (importer is now threaded)

To Do:
	- Resolve other bugs
	- Resolve billboard set problem

--- a/.gitignore
+++ b/.gitignore
@@ -6552,3 +6552,4 @@ SSWE/wall for volume light testing/water-jugs.jpg
 SSWE/wall for volume light testing/water-jugs.zip
 SSWE/wall for volume light testing/yad.jpg
 SSWE/wall for volume light testing/YAD.zip
+SSWE/data/Characters/test.anc
