Stable version finished
Made:
	- Resolved deletion bug
	- Resolved occlusion queries calculation
	- Resolved viewport on Render Creation window

To Do:
	- Work on an advanced code editor

--- a/.gitignore
+++ b/.gitignore
@@ -6553,3 +6553,6 @@ SSWE/wall for volume light testing/water-jugs.zip
 SSWE/wall for volume light testing/yad.jpg
 SSWE/wall for volume light testing/YAD.zip
 SSWE/data/Characters/test.anc
+SSWE/Renders/LHouse.jpg
+SSWE/Renders/LRuins.jpg
+SSWE/Renders/LSponza.jpg
